//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "reserve-me" {
  database_type: 'PostgreSQL'
  Note: 'Test pro ject description'
}

Table MeetingSchedule {
  id Int [pk, increment]
  meetingId Int [not null]
  meeting Meeting [not null]
  locationId Int [not null]
  location Location [not null]
  startDate DateTime [not null]
  endDate DateTime [not null]
  canceled Boolean [not null, default: false]
  cancellationReason String [not null, default: '']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table UsersOnMeetings {
  userExternalRefId String [not null]
  meetingId Int [not null]
  userName String [not null]
  meeting Meeting [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (userExternalRefId, meetingId) [pk]
    (userName, meetingId) [unique]
  }
}

Table EmployeesOnMeetings {
  id Int [pk, increment]
  userExternalRefId String [not null]
  meetingId Int [not null]
  userName String [not null]
  schedule EmployeeSchedule [not null]
  meeting Meeting [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (userExternalRefId, meetingId) [unique]
    (userName, meetingId) [unique]
  }
}

Table EmployeeSchedule {
  id Int [pk, increment]
  employeeId Int [not null]
  locationId Int [not null]
  startDate DateTime [not null]
  endDate DateTime [not null]
  canceled Boolean [not null, default: false]
  cancellationReason String [not null, default: '']
  repeatRate String
  employee EmployeesOnMeetings [not null]
  location Location [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Location {
  id Int [pk, increment]
  name String [unique, not null]
  street String [not null]
  houseNumber Int [not null]
  city String [not null]
  postalCode String [not null]
  employeeSchedules EmployeeSchedule [not null]
  meetingSchedules MeetingSchedule [not null]
}

Table Service {
  id Int [pk, increment]
  name String [not null]
  price Decimal [not null]
  servicesBookedOnMeetings ServicesBookedOnMeetings [not null]
  servicesProvidedOnMeetings ServicesProvidedOnMeetings [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table ServicesProvidedOnMeetings {
  serviceId Int [not null]
  meetingId Int [not null]
  service Service [not null]
  meeting Meeting [not null]

  indexes {
    (serviceId, meetingId) [pk]
  }
}

Table ServicesBookedOnMeetings {
  serviceId Int [not null]
  meetingId Int [not null]
  meeting Meeting [not null]
  service Service [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (serviceId, meetingId) [pk]
  }
}

Table Meeting {
  id Int [pk, increment]
  priceExcepted Decimal [not null]
  priceFull Decimal
  discount Decimal [not null, default: 0]
  priceFinal Decimal
  createdByExternalRefId String [not null]
  repeatRate String
  usersOnMeetings UsersOnMeetings [not null]
  employeesOnMeetings EmployeesOnMeetings [not null]
  schedules MeetingSchedule [not null]
  servicesBookedOnMeetings ServicesBookedOnMeetings [not null]
  servicesProvidedOnMeetings ServicesProvidedOnMeetings [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Ref: MeetingSchedule.meetingId > Meeting.id [delete: Cascade]

Ref: MeetingSchedule.locationId > Location.id

Ref: UsersOnMeetings.meetingId > Meeting.id [delete: Cascade]

Ref: EmployeesOnMeetings.meetingId > Meeting.id

Ref: EmployeeSchedule.employeeId > EmployeesOnMeetings.id

Ref: EmployeeSchedule.locationId > Location.id

Ref: ServicesProvidedOnMeetings.serviceId > Service.id

Ref: ServicesProvidedOnMeetings.meetingId > Meeting.id [delete: Cascade]

Ref: ServicesBookedOnMeetings.meetingId > Meeting.id [delete: Cascade]

Ref: ServicesBookedOnMeetings.serviceId > Service.id